--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -36,5 +36,17 @@
       android:layout_height="wrap_content" 
       android:text="@string/high_scores"
       />
+  <Button
+      android:id="@+id/settings_button"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/settings"
+      />
+  <Button
+      android:id="@+id/about_us_button"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/about_us"
+      />
 
 </LinearLayout>
